--- a/test.ipynb
+++ b/test.ipynb
@@ -81,7 +81,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://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@github.com/vanderbilt-data-science/job-coach-qa.git"
+        "!git clone https://github_token@github.com/vanderbilt-data-science/job-coach-qa.git"
       ],
       "metadata": {
         "colab": {
